# jit-learn

./: .gitignore  README.md  pyproject.toml  sign_function.py
src/jit_learn/: __init__.py  automorphisms.py  base.py  distribution.py  distributions.py  embedings.py  learning_rule.py  learning_rules.py  models.py  test_function.py
src/jit_learn/supervised/classification/: base.py
tests/: test_automorphisms.py  test_distribution.py  test_distributions.py  test_schwartz.py
tests/stories/supervised/classification/: test_jit.py
