[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jit-learn"
version = "0.0.1"
authors = [
  { name="Ramin Barati", email="rekino@gmail.com" },
]
description = "An implementation of JIT learning"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rekino/jit-learn"
"Bug Tracker" = "https://github.com/rekino/jit-learn/issues"